adding error & accuracy rate visualization

--- a/secondary.ipynb
+++ b/secondary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +122,184 @@
     "plt.show()\n",
     "\n",
     "print(\"LBP Program is finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2365  3347  3373  2708  2127  3077  5156 16241 36744 16677  4041  2460\n",
+      "   2109  2682  3480  3336  3293 16384]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skimage.feature import local_binary_pattern\n",
+    "\n",
+    "radius = 2\n",
+    "n_points = 8 * radius\n",
+    "METHOD = 'uniform'\n",
+    "plt.rcParams['font.size'] = 9\n",
+    "\n",
+    "# make function of LBP\n",
+    "def getdataTest(img):\n",
+    "    img_lbp = local_binary_pattern(img, n_points, radius, METHOD)\n",
+    "    img_lbp_hist,bins = np.histogram(img_lbp.ravel(),256,[0,256])\n",
+    "    img_lbp_hist = np.transpose(img_lbp_hist[0:18,np.newaxis])\n",
+    "    return img_lbp_hist\n",
+    "\n",
+    "path = './dataset/testing/parang_style/YK063.jpg'\n",
+    "img_test = cv2.imread(path, 2)\n",
+    "print(getdataTest(img_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  3.  6. ...  5.  6.  5.]\n",
+      " [ 3.  4.  8. ...  5.  7.  6.]\n",
+      " [ 1. 17.  8. ...  9.  8.  7.]\n",
+      " ...\n",
+      " [ 8.  8.  8. ...  8. 17. 17.]\n",
+      " [ 6.  6.  6. ...  5.  1.  0.]\n",
+      " [ 5.  5.  5. ...  4.  1.  0.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(360, 360)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking image after LBP process\n",
+    "\n",
+    "path = './dataset/testing/parang_style/YK063.jpg'\n",
+    "img = cv2.imread(path, 2)\n",
+    "img_lbp = local_binary_pattern(img, n_points, radius, METHOD)\n",
+    "\n",
+    "print(img_lbp)\n",
+    "img_lbp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2365  3347  3373  2708  2127  3077  5156 16241 36744 16677  4041  2460\n",
+      "  2109  2682  3480  3336  3293 16384     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(256,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking image of LBP result then convert to histogram\n",
+    "\n",
+    "img_lbp_hist,bins = np.histogram(img_lbp.ravel(),256,[0,256])\n",
+    "print(img_lbp_hist)\n",
+    "img_lbp_hist.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2365  3347  3373  2708  2127  3077  5156 16241 36744 16677  4041  2460\n",
+      "   2109  2682  3480  3336  3293 16384     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 256)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking image in histogram shape and then do tranpose\n",
+    "\n",
+    "img_lbp_hist_transpose = np.transpose(img_lbp_hist[0:256,np.newaxis])\n",
+    "print(img_lbp_hist_transpose)\n",
+    "img_lbp_hist_transpose.shape"
    ]
   }
  ],
