on progress deploying to web

--- a/third.ipynb
+++ b/third.ipynb
@@ -63,6 +63,22 @@
     "error_rate_nb = np.mean(pred_i != label)\n",
     "print(\"Error rate result using Naive Bayes : \", error_rate_nb.mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "acc_score = cross_val_score(model, data_train, label, cv=5, scoring='accuracy')\n",
+    "pred_i = model.predict(data_train)\n",
+    "error_rate = np.mean(pred_i != label)\n",
+    "\n",
+    "print(\"Accuracy result using model : \", acc_score.mean())\n",
+    "print(\"Error rate result using 'model' : \", error_rate.mean())"
+   ]
   }
  ],
  "metadata": {
