model deployment done

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "106da73e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "ad4bbdfa",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "8d311146",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "7e2635f5",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "97f64a38",
    "metadata": {},
    "outputs": [
@@ -436,18 +436,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "id": "2101da2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7833333333333334\n"
+     ]
+    }
+   ],
    "source": [
     "# Fix model of KNN\n",
-    "model_knn = KNeighborsClassifier(n_neighbors=3)"
+    "model_knn = KNeighborsClassifier(n_neighbors=4)\n",
+    "model_knn.fit(data_train,label)\n",
+    "\n",
+    "acc_model_knn = cross_val_score(model_knn, data_train, label, cv=5, scoring='accuracy')\n",
+    "print(acc_model_knn.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "d0be0ddd",
    "metadata": {},
    "outputs": [
@@ -457,7 +469,7 @@
        "Text(0, 0.5, 'Accuracy Rate')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "id": "9f892352",
    "metadata": {},
    "outputs": [
@@ -496,7 +508,7 @@
        "Text(0, 0.5, 'Error Rate')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -525,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "id": "c05e53ac",
    "metadata": {},
    "outputs": [
@@ -535,7 +547,7 @@
        "Text(0, 0.5, 'Accuracy & Error Rate')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -573,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "fba1fb55",
    "metadata": {},
    "outputs": [
@@ -610,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "id": "f19e5013",
    "metadata": {},
    "outputs": [
@@ -646,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "id": "441dddd4",
    "metadata": {},
    "outputs": [
@@ -656,17 +668,17 @@
      "text": [
       "Detection KNN result :  ['Batik Ceplok']\n",
       "Detection SVM result :  ['Batik Ceplok']\n",
-      "Detection Naive Bayes result :  ['Batik Ceplok']\n"
+      "Detection Naive Bayes result :  ['Batik Parang']\n"
      ]
     }
    ],
    "source": [
-    "gambar = cv.imread(\"dataset/testing/ceplok_style/SC012.jpg\", cv.IMREAD_GRAYSCALE)\n",
+    "gambar = cv.imread(\"dataset/testing/parang_style/parang5.jpg\", cv.IMREAD_GRAYSCALE)\n",
     "\n",
     "x = getdataTest(gambar)\n",
-    "knn_pred = knn.predict(x)\n",
-    "svm_pred = svc.predict(x)\n",
-    "nb_pred = nb.predict(x)\n",
+    "knn_pred = model_knn.predict(x)\n",
+    "svm_pred = model_svc.predict(x)\n",
+    "nb_pred = model_nb.predict(x)\n",
     "\n",
     "print(\"Detection KNN result : \", knn_pred)\n",
     "print(\"Detection SVM result : \", svm_pred)\n",
@@ -688,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "id": "87426590",
    "metadata": {},
    "outputs": [],
