--- a/third.ipynb
+++ b/third.ipynb
@@ -2,82 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 256)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "from skimage.feature import local_binary_pattern\n",
     "\n",
-    "# KNN Modeling\n",
-    "error_rate = []\n",
-    "acc_rate = []\n",
-    "for i in range (2,25):\n",
-    "    knn = KNeighborsClassifier(n_neighbors=i)\n",
-    "    knn.fit(data_train, label)\n",
-    "    pred_i = knn.predict(data_train)\n",
-    "    error_rate.append(np.mean(pred_i != label))\n",
-    "    \n",
-    "    acc_knn = cross_val_score(knn, data_train, label, cv=5, scoring='accuracy')\n",
-    "    acc_rate.append(acc_knn.mean())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "radius = 2\n",
+    "n_points = 8 * radius\n",
+    "METHOD = 'uniform'\n",
     "\n",
-    "svc = SVC(kernel='linear', C=1)\n",
-    "svc.fit(data_train, label)\n",
+    "# make function of LBP   \n",
     "\n",
-    "acc_svc = cross_val_score(svc, data_train, label, cv=5, scoring='accuracy')\n",
-    "print(\"Accuracy result using SVM : \", acc_svc.mean())\n",
+    "path = './static/uploads/SC012.jpg'\n",
+    "img = cv.imread(path, cv.IMREAD_GRAYSCALE)\n",
     "\n",
-    "pred_i = svc.predict(data_train)\n",
-    "error_rate_svc = np.mean(pred_i != label)\n",
-    "print(\"Error rate result using SVM : \", error_rate_svc.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "img_lbp = local_binary_pattern(img, n_points, radius, METHOD)\n",
+    "img_lbp_hist,bins = np.histogram(img_lbp.ravel(),256,[0,256])\n",
+    "img_lbp_hist = np.transpose(img_lbp_hist[0:256,np.newaxis])\n",
     "\n",
-    "nb = MultinomialNB()\n",
-    "\n",
-    "acc_nb = cross_val_score(nb, data_train, label, cv=5, scoring='accuracy')\n",
-    "nb.fit(data_train, label)\n",
-    "\n",
-    "print(\"Accuracy result using Naive Bayes : \", acc_svc.mean())\n",
-    "\n",
-    "pred_i = nb.predict(data_train)\n",
-    "error_rate_nb = np.mean(pred_i != label)\n",
-    "print(\"Error rate result using Naive Bayes : \", error_rate_nb.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "acc_score = cross_val_score(model, data_train, label, cv=5, scoring='accuracy')\n",
-    "pred_i = model.predict(data_train)\n",
-    "error_rate = np.mean(pred_i != label)\n",
-    "\n",
-    "print(\"Accuracy result using model : \", acc_score.mean())\n",
-    "print(\"Error rate result using 'model' : \", error_rate.mean())"
+    "img_lbp_hist.shape"
    ]
   }
  ],
@@ -88,7 +46,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4,
